--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <footer id="contact" class="py-12 text-center text-slate-500 text-xs border-t border-slate-800">
         <div class="max-w-4xl mx-auto px-4 mb-6">
             <h4 class="text-slate-400 font-bold mb-2">Kontakt</h4>
-            <p>E-Mail: DEINE-EMAIL@BEISPIEL.DE</p>
-            <p>Tel: DEINE-TELEFONNUMMER</p>
+            <p>E-Mail: metzler88@gmail.com</p>
+            <p>Tel: 0173 2431285</p>
         </div>
         
         <div class="space-x-4 mb-4">
@@ -103,9 +103,9 @@
                 content.innerHTML = `
                     <h2 class="text-xl font-bold mb-4 text-white">Impressum</h2>
                     <p class="font-bold">Angaben gemäß § 5 TMG:</p>
-                    <p class="mb-4">Vorname Nachname<br>Straße Hausnummer<br>PLZ Ort</p>
+                    <p class="mb-4">Wadim Metzler<br>Schaltenberg 9<br>72393 Burladingen</p>
                     <p class="font-bold">Kontakt:</p>
-                    <p>Telefon: DEINE-TELEFONNUMMER<br>E-Mail: DEINE-EMAIL@BEISPIEL.DE</p>
+                    <p>Telefon: 0173 2431285<br>E-Mail: metzler88@gmail.com</p>
                 `;
             } else if (type === 'datenschutz') {
                 content.innerHTML = `
@@ -121,4 +121,5 @@
 
 </body>
 </html>
+
 
