--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Feinwerkmechanik & IT-Innovation</title>
+    <title>Wadim Metzler - Portfolio | Feinwerkmechanik & IT-Innovation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #0f172a; color: #f8fafc; scroll-behavior: smooth; }
@@ -121,5 +121,6 @@
 
 </body>
 </html>
+
 
 
