--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="font-sans">
 
     <nav class="p-6 flex justify-between items-center max-w-5xl mx-auto">
-        <div class="text-xl font-bold gradient-text">Portfolio</div>
+        <div class="text-xl font-bold gradient-text">Wadim Metzler</div>
         <div class="space-x-6 text-sm font-medium">
             <a href="#projekte" class="hover:text-sky-400">Projekte</a>
             <a href="https://drive.google.com/file/d/1oBvn8XMDxWSzWySr7ycKlhFMQUM-UWLe/view?usp=sharing" target="_blank" class="bg-sky-600 hover:bg-sky-500 px-4 py-2 rounded-lg transition">Lebenslauf (PDF)</a>
@@ -23,7 +23,7 @@
     </nav>
 
     <header class="py-24 text-center max-w-4xl mx-auto px-4">
-        <h1 class="text-5xl md:text-6xl font-extrabold mb-6 leading-tight">Vom Meister zur <br><span class="gradient-text">KI-Automatisierung</span></h1>
+        <h1 class="text-5xl md:text-6xl font-extrabold mb-6 leading-tight">Vom Handwerks-Meister zur <br><span class="gradient-text">KI-Automatisierung</span></h1>
         <p class="text-xl text-slate-400 mb-10">Feinwerkmechanikermeister & Konstrukteur. Ich verbinde handwerkliche Präzision mit modernster IT-Logik und No-Code-Automatisierung.</p>
         <div class="flex justify-center gap-4 text-xs uppercase tracking-widest text-slate-500">
             <span>Python</span> • <span>JavaScript</span> • <span>Make.com</span> • <span>Generative AI</span>
@@ -121,6 +121,7 @@
 
 </body>
 </html>
+
 
 
 
