--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <link rel="icon" type="image/png" href="icon.jpeg">
+    <link rel="icon" type="image/jpeg" href="Icon.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Feinwerkmechanik & IT-Innovation</title>
@@ -26,7 +26,7 @@
     <header class="py-12 md:py-24 text-center max-w-4xl mx-auto px-6">
         <h1 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight">Vom Meister zur <br><span class="gradient-text">KI-Automatisierung</span></h1>
         <p class="text-base md:text-xl text-slate-400 mb-10 leading-relaxed">
-            Feinwerkmechanikermeister & Konstrukteur. Wer Präzision im Mikrometerbereich beherrscht, versteht auch die Logik von Code. Ich verbinde handwerkliche Genauigkeit mit modernster IT-Logik.
+            Feinwerkmechanikermeister & Konstrukteur. Wer Präzision im Mikrometerbereich beherrscht, versteht auch die Logik von Code. Handwerkliche Genauigkeit mit modernster IT-Logik.
         </p>
         <div class="flex flex-wrap justify-center gap-3 text-[10px] md:text-xs uppercase tracking-widest text-slate-500">
             <span class="border border-slate-700 px-2 py-1 rounded">Python</span>
@@ -66,14 +66,14 @@
     <section class="max-w-4xl mx-auto px-6 py-16 text-center border-t border-slate-800">
         <h2 class="text-2xl font-bold mb-6">Mein Mindset</h2>
         <p class="text-slate-400 leading-relaxed italic text-sm md:text-base">
-            "Ich verlasse den sicheren Hafen der klassischen Mechanik, um das Gelände der IT und Künstlichen Intelligenz zu erobern. Jetzt."
+            "Ich verlasse den sicheren Hafen der klassischen Mechanik, um das Gelände der IT und Künstlichen Intelligenz zu erobern."
         </p>
     </section>
 
     <footer id="contact" class="py-12 text-center text-slate-500 text-xs border-t border-slate-800 px-6">
         <div class="max-w-4xl mx-auto mb-6">
             <h4 class="text-slate-400 font-bold mb-2 uppercase tracking-tighter">Kontakt</h4>
-            <p>E-Mail: DEINE-EMAIL@BEISPIEL.DE</p>
+            <p>E-Mail: metzler88@gmail.com</p>
         </div>
         
         <div class="flex justify-center gap-6 mb-4">
@@ -96,14 +96,17 @@
             const content = document.getElementById('modal-content');
             if (!type) { modal.classList.add('hidden'); return; }
             if (type === 'impressum') {
-                content.innerHTML = `<h2 class="text-xl font-bold mb-4 text-white">Impressum</h2><p><strong>Angaben gemäß § 5 TMG:</strong></p><p>Dein Name<br>Straße Hausnummer<br>PLZ Ort</p><br><p><strong>Kontakt:</strong></p><p>E-Mail: DEINE-EMAIL@BEISPIEL.DE</p>`;
+                content.innerHTML = `<h2 class="text-xl font-bold mb-4 text-white">Impressum</h2><p><strong>Angaben gemäß § 5 TMG:</strong></p><p>Wadim Metzler<br>Schaltenberg 9<br>72393 Burladingen</p><br><p><strong>Kontakt:</strong></p><p>E-Mail: metzler88@gmail.com</p>`;
             } else if (type === 'datenschutz') {
                 content.innerHTML = `<h2 class="text-xl font-bold mb-4 text-white">Datenschutz</h2><p>Diese Website dient Bewerbungszwecken. Es werden keine Tracker verwendet. Hosting via GitHub Pages.</p>`;
             }
             modal.classList.remove('hidden');
         }
     </script>
-
+<script>
+(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="C1peyqf6R1mPSeI2HrylK";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+</script>
     </body>
 </html>
+
 
