--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="font-sans">
 
     <nav class="p-4 md:p-6 flex flex-wrap justify-between items-center max-w-5xl mx-auto gap-4">
-        <div class="text-xl font-bold gradient-text w-full text-center md:w-auto md:text-left">Portfolio</div>
+        <div class="text-xl font-bold gradient-text w-full text-center md:w-auto md:text-left">Wadim Metzler</div>
         <div class="flex justify-center items-center gap-4 md:gap-6 w-full md:w-auto text-sm font-medium">
             <a href="#projekte" class="hover:text-sky-400">Projekte</a>
             <a href="https://drive.google.com/file/d/1oBvn8XMDxWSzWySr7ycKlhFMQUM-UWLe/view?usp=sharing" target="_blank" class="bg-sky-600 hover:bg-sky-500 px-4 py-2 rounded-lg transition text-center">Lebenslauf (PDF)</a>
@@ -108,5 +108,6 @@
 </script>
     </body>
 </html>
+
 
 
