--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/jpeg" href="Icon.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Feinwerkmechanik & IT-Innovation</title>
+    <title>Wadim Metzler | Ki-Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #0f172a; color: #f8fafc; scroll-behavior: smooth; }
@@ -20,11 +20,17 @@
         <div class="flex justify-center items-center gap-4 md:gap-6 w-full md:w-auto text-sm font-medium">
             <a href="#projekte" class="hover:text-sky-400">Projekte</a>
             <a href="https://drive.google.com/file/d/1oBvn8XMDxWSzWySr7ycKlhFMQUM-UWLe/view?usp=sharing" target="_blank" class="bg-sky-600 hover:bg-sky-500 px-4 py-2 rounded-lg transition text-center">Lebenslauf (PDF)</a>
+
+            <a href="https://drive.google.com/open?id=1O5ztfBjDcpWBu7AVn3Y6wStHdeijlHTC" 
+       target="_blank" 
+       class="bg-sky-600 hover:bg-sky-500 px-4 py-2 rounded-lg transition text-center w-full md:w-auto font-bold">
+       Anschreiben (PDF)
+    </a>
         </div>
     </nav>
 
     <header class="py-12 md:py-24 text-center max-w-4xl mx-auto px-6">
-        <h1 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight">Vom Meister zur <br><span class="gradient-text">KI-Automatisierung</span></h1>
+        <h1 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight">Vom Meister zum <br><span class="gradient-text">KI-Manager</span></h1>
         <p class="text-base md:text-xl text-slate-400 mb-10 leading-relaxed">
             Feinwerkmechanikermeister & Konstrukteur. Wer Präzision im Mikrometerbereich beherrscht, versteht auch die Logik von Code. Handwerkliche Genauigkeit mit modernster IT-Logik.
         </p>
@@ -108,6 +114,7 @@
 </script>
     </body>
 </html>
+
 
 
 
